--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.14.1",
     "mongoose": "^6.11.1",
     "navigo": "^8.11.1"
   }
